# dwm

./: .gitignore  config.h  dwm  dwm.c  meson.build  util.c  util.h
.cache/clangd/index/: config.h.01D489CD3C398AFF.idx  config.h.7482B4B30B1B2453.idx  drw.c.58255FA0778AD631.idx  drw.c.BCF27FD25FFFF45D.idx  drw.h.308A2706AB201413.idx  drw.h.9D2C0DBA29653846.idx  dwm.c.B0FE41D5605BE084.idx  dwm.c.B97B48965D3BAFF2.idx  util.c.37E0E3635C856667.idx  util.c.44F5E534C1D7B65A.idx  util.h.2A3AF3BFF3BC5C21.idx  util.h.EA209A67898FACB3.idx
